# ability_runtime

./: .gitignore  .gitlab-ci.yml  0522ams_pass.patch  Auth.java  BUILD.gn  CMakeLists.txt  CODEOWNERS  CacheScheduleServiceImpl.java  CodeCheckDevOperation.java  CodeCheckOperation.java  CodeCheckOverViewImpl.java  ComponentBuildServiceImpl.java  CustomParameterOperation.java  DateUtil.java  DocsCheckBoardServiceImpl.java  EventBuildAnalyseOperation.java  EventBuildAnalyseServiceImpl.java  EventCodeCheckOperation.java  EventOperation.java  EventPrMsgOperation.java  EventPrMsgSyncDelegateImpl.java  EventServiceImpl.java  FossScanOperation.java  GiteePermissionOperation.java  HttpClientUtil.java  IncResultDetailsOperation.java  JsonUtils.java  OAT.xml  OperationUtil.java  ParallelTaskFactory.java  PipelineOperation.java  ProjectImpl.java  PublicKeyAuth.java  README_zh.md  RedisOperateUtils.java  RightManager.java  aafwk.gni  ability_runtime.gni  bundle.json  ceshi.md  (+13 more)
ability_base/: BUILD.gn  bundle.json
common/: BUILD.gn
ecmascript/: js_runtime_options.cpp  js_runtime_options.h
form_fwk/: BUILD.gn  bundle.json  form_fwk.gni
form_runtime/: BUILD.gn  bundle.json
frameworks/js/napi/ability_manager/: BUILD.gn  js_ability_foreground_state_observer.cpp  js_ability_foreground_state_observer.h  js_ability_manager.cpp  js_ability_manager_utils.cpp  js_ability_manager_utils.h  js_api_utils.cpp  js_api_utils.h
frameworks/js/napi/app/ability_delegator/: BUILD.gn  ability_monitor.cpp  ability_monitor.h  ability_stage_monitor.h  js_ability_delegator.cpp  js_ability_delegator.h  js_ability_delegator_registry.cpp  js_ability_delegator_utils.cpp  js_ability_monitor.cpp
frameworks/js/napi/inner/napi_common/: BUILD.gn  feature_ability_common.h  js_napi_common_ability.h  napi_common_ability error.cpp  napi_common_ability.cpp  napi_common_ability.h  napi_common_ability_error.h  napi_common_configuration.cpp  napi_common_data.h  napi_common_execute_param.cpp  napi_common_util.cpp  napi_common_util.h  napi_common_want.cpp
frameworks/kits/tools/simulateFeatureAbility/: BUILD.gn  config.json
frameworks/kits/tools/simulateFeatureAbility/include/: simulate_feature_ability_fir.h  simulate_feature_ability_sed.h
frameworks/kits/tools/simulateFeatureAbility/src/: simulate_feature_ability_fir.cpp  simulate_feature_ability_sed.cpp
frameworks/kits/tools/verifyAbility/verifyIOAbility/: BUILD.gn  config.json
frameworks/kits/tools/verifyAbility/verifyIOAbility/include/: verify_io_eighth_ability.h  verify_io_fifth_ability.h  verify_io_first_ability.h  verify_io_fourth_ability.h  verify_io_ninth_ability.h  verify_io_second_ability.h  verify_io_seventh_ability.h  verify_io_sixth_ability.h  verify_io_tenth_ability.h  verify_io_third_ability.h
frameworks/kits/tools/verifyAbility/verifyIOAbility/src/: verify_io_eighth_ability.cpp  verify_io_fifth_ability.cpp  verify_io_first_ability.cpp  verify_io_fourth_ability.cpp  verify_io_ninth_ability.cpp  verify_io_second_ability.cpp  verify_io_seventh_ability.cpp  verify_io_sixth_ability.cpp  verify_io_tenth_ability.cpp  verify_io_third_ability.cpp
idl/: BUILD.gn  bundle.json  main.cpp
interfaces/inner_api/data_ability_manager/: BUILD.gn
interfaces/inner_api/data_ability_manager/include/: data_ability_manager_client.h  data_ability_manager_interface.h  data_ability_manager_proxy.h
interfaces/inner_api/data_ability_manager/src/: data_ability_manager_client.cpp  data_ability_manager_proxy.cpp
interfaces/inner_api/dialog_session/: BUILD.gn
interfaces/inner_api/dialog_session/include/: js_dialog_session.h  js_dialog_session_utils.h
interfaces/inner_api/uiextension_manager/: BUILD.gn
interfaces/inner_api/uiextension_manager/include/: uiextension_manager_client.h  uiextension_manager_interface.h  uiextension_manager_proxy.h
interfaces/inner_api/uiextension_manager/src/: uiextension_manager_client.cpp  uiextension_manager_proxy.cpp
js_environment/module_manager/: BUILD.gn
js_environment/module_manager/include/: module_load_checker.h
js_environment/module_manager/include/module_manager/: native_module_manager.h
js_environment/module_manager/src/: module_load_checker.cpp  native_module_manager.cpp
js_environment/test/unittest/module_manager_test/: BUILD.gn  module_manager_test.cpp
sa_profile/: 180.xml  (+6 more)
services/abilitymgr/examples/: BUILD.gn
services/abilitymgr/examples/free_install_test/: main.cpp
services/continuationmgr/: BUILD.gn
services/continuationmgr/src/: continuation_extra_params.cpp  continuation_result.cpp
services/mysamgr/: BUILD.gn  mysa.cfg
services/mysamgr/include/: my_sa_manager_service.h  my_sa_manager_stub_impl.h
services/mysamgr/src/: my_sa_manager_service.cpp  my_sa_manager_stub_impl.cpp
test/unittest/insight_intent_test/ability_manager_service_insight_intent_test/: BUILD.gn  ability_manager_service_insight_intent_test.cpp
tools/connection_tool/: BUILD.gn
tools/connection_tool/include/: connection_observer_shell_command.h  test_connection_observer.h
tools/connection_tool/src/: connection_observer_shell_command.cpp  main.cpp  test_connection_observer.cpp
tools/icontroller_tool/: BUILD.gn
tools/icontroller_tool/include/: mock_native_token.h
tools/icontroller_tool/src/: main.cpp  mock_native_token.cpp
tools/is_sa_call/: BUILD.gn  is_sa_call_test.cpp  is_sa_call_test.h
tools/render_state_tool/: BUILD.gn
tools/render_state_tool/src/: main.cpp
tools/zip/test/: BUILD.gn
tools/zip/test/unittest/: zip_test.cpp
zidl/: CMakeLists.txt  bundle.json
zidl/ast/: CMakeLists.txt
zidl/codegen/: CMakeLists.txt  code_generator.cpp  js_code_emitter.cpp  js_code_emitter.h
zidl/metadata/: CMakeLists.txt  metadata_builder.cpp
zidl/parser/: CMakeLists.txt  parser.cpp
zidl/test/native/: BUILD.gn
zidl/test/native/src/: zidl_test_service_proxy.cpp  zidl_test_service_stub.cpp
zidl/test/ts/moduletest/js_code_emitter_proxy_test/: js_code_emitter_proxy_test.cpp
zidl/test/ts/moduletest/js_coe_emitter_interface_test/: js_code_emitter_interface.cpp
zidl/util/: CMakeLists.txt  file.cpp  options.cpp
(+4887 files in other folders)
