# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/aafwk.gni")

config("continuationmgr_config") {
  include_dirs = [
    "include/",
    "${innerkits_path}/continuation_manager/include",
    "${services_path}/common/include",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

group("continuationmgr_target") {
  deps = [ ":libcontinuationmgr" ]
}

ohos_shared_library("libcontinuationmgr") {
  sources = [
    "src/continuation_extra_params.cpp",
    "src/continuation_result.cpp",
  ]
  cflags_cc = []
  configs = [ ":continuationmgr_config" ]
  deps = []

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "utils_base:utils",
  ]

  subsystem_name = "ability"
  part_name = "ability_runtime"
}