# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/aafwk.gni")

config("mysa_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//foundation/ability/ability_runtime/interfaces/inner_api/ability_manager/include",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_prebuilt_etc("mysa.cfg") {
  relative_install_dir = "init"
  source = "mysa.cfg"
  part_name = "ability_runtime"
  subsystem_name = "ability"
}

#build so
ohos_shared_library("libmysa") {
  configs = [ "${services_path}/common:common_config" ]
  public_configs = [ ":mysa_config" ]

  sources = [
    "src/my_sa_manager_service.cpp",
    "src/my_sa_manager_stub_impl.cpp",
  ]

  deps = [
    "${innerkits_path}/my_sa:my_sa_mgr",
    "//foundation/ability/ability_runtime/interfaces/inner_api/ability_manager:ability_manager"
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  subsystem_name = "ability"
  part_name = "ability_runtime"
}
