# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

config("tools_connection_obs_config") {
  include_dirs = [
    "include",
    "${ability_runtime_innerkits_path}/connectionobs_manager/include",
    "${ability_runtime_services_path}/common/include",
  ]
}

ohos_source_set("tools_connection_obs_source_set") {
  sources = [
    "src/connection_observer_shell_command.cpp",
    "src/main.cpp",
    "src/test_connection_observer.cpp",
  ]

  defines = [
    "AMS_LOG_TAG = \"ConnetionObsTool\"",
    "AMS_LOG_DOMAIN = 0xD001152",
  ]

  public_configs = [ ":tools_connection_obs_config" ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = []

  external_deps = [
    "ability_runtime:connection_obs_manager",
    "bundle_framework:appexecfwk_base",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  subsystem_name = "ability"
  part_name = "ability_tools"
}

ohos_executable("connection_obs") {
  deps = [ ":tools_connection_obs_source_set" ]

  install_enable = true

  subsystem_name = "ability"
  part_name = "ability_tools"
}

group("tools_connection_obs") {
  deps = [ ":connection_obs" ]
}
