import("//build/test.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

ohos_executable("icontroller") {
  sources = [
    "src/mock_native_token.cpp",
    "src/main.cpp",
  ]

  include_dirs = [
    "${ability_runtime_innerkits_path}/app_manager/include/appmgr",
    "${ability_runtime_services_path}/common/include",
    "${ability_runtime_test_path}/mock/common/include",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
    "${ability_runtime_innerkits_path}/app_manager:app_manager"
  ]

  external_deps = [
    "ability_base:session_info",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "ability"
  part_name = "ability_runtime"
}

group("icontroller_tool") {
  deps = [ ":icontroller" ]
}