# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_executable("free_install_test") {
  sources = [ "free_install_test/main.cpp" ]

  configs = [
    ":test_config",
  ]

  deps = [
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/aafwk/standard/services/abilitymgr:abilityms",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
    "//foundation/aafwk/standard/services/appmgr:libams",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
  ]

  external_deps = [
    "ipc:ipc_core",
   ]

  subsystem_name = "aafwk"
  part_name = "ability_runtime"
}

config("test_config") {
  # header file path
  include_dirs = [
    "//foundation/aafwk/standard/interfaces",
    "//foundation/aafwk/standard/services/abilitymgr/include",
    "//foundation/aafwk/standard/services/common/include",
    "//foundation/aafwk/standard/interfaces/innerkits/app_manager/include/appmgr",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/appexecfwk/standard/services/bundlemgr/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr/",
  ]

  # enable exception

  configs = [ "//foundation/aafwk/standard/services/abilitymgr:abilityms_config" ]
}
