# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "aafwk_standard/tools_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = []
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  defines = [
    "APP_LOG_TAG = \"ZipUnitTest\"",
    "LOG_DOMAIN = 0xD002201",
  ]
}

ohos_unittest("zip_test") {
  module_out_path = module_output_path

  include_dirs = [ "//foundation/aafwk/standard/tools/zip/include" ]
  sources =
      [ "//foundation/aafwk/standard/tools/zip/test/unittest/zip_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/aafwk/standard/tools/zip:zlib",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

group("unittest") {
  testonly = true
  deps = []

  deps += [ ":zip_test" ]
}
