# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

ohos_shared_library("abilitymanager_napi") {
  sources = [
    "ability_manager_module.cpp",
    "js_ability_manager.cpp",
    "js_ability_manager_utils.cpp",
  ]

  configs = [ "${ability_runtime_services_path}/common:common_config" ]

  include_dirs = [
    "//foundation/ability/form_fwk/interfaces/inner_api/include/",
    "//foundation/ability/form_fwk/interfaces/kits/native/include/",
    "//foundation/window/window_manager/utils/include/",
    "//foundation/window/window_manager/interfaces/innerkits/dm/",
    "./",
    "//third_party/icu/icu4c/source/common",
    "//base/notification/common_event_service/interfaces/inner_api/",
    "//base/notification/common_event_service/frameworks/core/include/",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk/",
    "//third_party/icu/icu4c/source/common/",
    "//base/global/resource_management/interfaces/inner_api/include/",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include/",
    "//foundation/communication/ipc/ipc/native/src/napi/include/",
    "//foundation/arkui/ace_engine/frameworks/base/utils/",
    "//foundation/graphic/graphic_2d/utils/buffer_handle/export/",
    "//drivers/peripheral/display/interfaces/include/",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/common/",
    "//drivers/peripheral/base/",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/surface/",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/wmclient/",
    "//third_party/flutter/engine/",
    "//third_party/flutter/engine/flutter/lib/ui/window/",
    "//foundation/ability/ability_runtime/interfaces/kits/native/ability/native/continuation/kits",
    "//foundation/ability/ability_runtime/interfaces/kits/native/ability/native/continuation/distributed",
    "//foundation/window/window_manager/interfaces/innerkits/wm",
  ]

  deps = [ "${ability_runtime_napi_path}/inner/napi_common:napi_common" ]

  external_deps = [
    "ability_base:configuration",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:runtime",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "ipc_js:rpc",
    "napi:ace_napi",
    "samgr:samgr_proxy",
    "utils_base:utils",
  ]

  relative_install_dir = "module/application"

  subsystem_name = "ability"
  part_name = "ability_runtime"
}
