# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/arkui/napi/napi.gni")
import("../../../js_environment.gni")

module_output_path = "ability_runtime/js_environment"

ohos_unittest("module_manager_test") {
  module_out_path = module_output_path

  sources = [
    "${base_path}/test/mock/src/mock_native_module_manager.cpp",
    "${base_path}/test/unittest/module_manager_test/module_manager_test.cpp",
  ]

  include_dirs = [
    "${base_path}/frameworks/utils/include",
    "${base_path}/module_manager/include",
    "${base_path}/test/mock/include",
  ]

  cflags = []

  deps = [
    "$base_path/module_manager:module_manager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  configs = []

  external_deps = [ "hilog_native:libhilog" ]
}

group("unittest") {
  testonly = true
  deps = [ ":module_manager_test" ]
}
