# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

ohos_shared_library("abilitydelegatorregistry") {
  include_dirs = [
    "//foundation/ability/ability_runtime/interfaces/kits/native/appkit/ability_runtime/context/",
    "//foundation/ability/form_fwk/interfaces/inner_api/include/",
    "//foundation/ability/form_fwk/interfaces/kits/native/include/",
    "//foundation/ability/form_fwk/interfaces/kits/native/include/",
    "//foundation/window/window_manager/utils/include/",
    "//foundation/window/window_manager/interfaces/innerkits/wm/",
    "//foundation/ability/ability_runtime/services/abilitymgr/include/",
    "//foundation/ability/ability_runtime/interfaces/kits/native/appkit/ability_runtime/",
    "//foundation/ability/ability_runtime/interfaces/inner_api/wantagent/include/",
    "./",
    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_delegator/",
    "//foundation/communication/ipc/ipc/native/src/napi/include/",
    "//foundation/arkui/ace_engine/frameworks/base/utils/",
    "//foundation/graphic/graphic_2d/utils/promise/export/",
    "//foundation/graphic/graphic_2d/utils/buffer_handle/export/",
    "//drivers/peripheral/display/interfaces/include/",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/common/",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/wmclient/",
    "//drivers/peripheral/base/",
    "//foundation/graphic/graphic_2d/interfaces/inner_api/surface/",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include/",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include/bundlemgr/",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_base/include/",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include/",
    "//foundation/ability/ability_runtime/interfaces/kits/native/ability/native",
    "//foundation/multimedia/camera_lite/interfaces/kits",
    "//base/notification/eventhandler/interfaces/inner_api",
    "//foundation/ability/ability_runtime/tools/aa/include",
    "//foundation/ability/ability_runtime/interfaces/kits/native/appkit/app",
    "//foundation/ability/ability_runtime/interfaces/inner_api/app_manager/include/appmgr",
    "//foundation/ability/ability_runtime/interfaces/kits/native/ability/native/continuation/kits",
    "//foundation/ability/ability_runtime/interfaces/kits/native/ability/native/continuation/distributed",
    "//foundation/window/window_manager/interfaces/innerkits/dm",
  ]

  sources = [
    "ability_monitor.cpp",
    "js_ability_delegator.cpp",
    "js_ability_delegator_registry.cpp",
    "js_ability_delegator_utils.cpp",
    "js_ability_monitor.cpp",
    "native_module.cpp",
  ]

  configs = [ "${ability_runtime_services_path}/common:common_config" ]

  deps = [
    "${ability_runtime_napi_path}/inner/napi_common:napi_common",
    "${ability_runtime_native_path}/appkit:app_context_utils",
    "${ability_runtime_native_path}/appkit:appkit_delegator",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
    "utils_base:utils",
  ]

  relative_install_dir = "module/application"

  subsystem_name = "ability"
  part_name = "ability_runtime"
}
